@@ -1917,7 +1917,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Jump to measure</property>
 		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_jump_to_measure_activate" last_modification_time="Thu, 15 Jan 2004 04:04:46 GMT"/>
+		      <signal name="activate" handler="edit_jump_to_measure_widget" last_modification_time="Thu, 15 Jan 2004 04:04:46 GMT"/>
 		      <accelerator key="j" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
